add news-page; fix config

--- a/content/news/_index.Rmd
+++ b/content/news/_index.Rmd
@@ -23,4 +23,5 @@ d <- read_rds(
 --------------------------------------------------------------------------------
 
 ## 2020-09-23
-Beta-test
+
+alpha-test
