--- a/my_code/player.Rmd
+++ b/my_code/player.Rmd
@@ -78,7 +78,11 @@ __Antal tourer:__ `r n_tours`
 
 ### Placeringar genom tiderna
 ```{r placing-net, echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
-placing <- plot_placing(ds = d, results_type = "results_net", lastname = player)
+placing <- plot_placing(
+  ds = d, 
+  results_type = "results_net", 
+  lastname = player
+)
 
 # placera plot-filen under `./static/playerstats/`
 abspath <- file.path(
@@ -105,8 +109,8 @@ glue::glue('![placeringshistorik]({relpath})')
 
 ```{r placing-gross, echo=FALSE, message=FALSE, warning=FALSE, results='asis'}
 placing <- plot_placing(
-  # Inga scorekort från Tour 1-4; kan inte veta vem som vann.
-  ds = d %>% slice(-c(1:4)),
+  # Inga scorekort från Tour 1-4 och 20; kan inte veta vem som vann.
+  ds = d %>% slice(-c(1:4, 20)),
   results_type = "results_gross", 
   lastname = player
 )
@@ -178,6 +182,8 @@ get_head2head <- function(player1, player2, d, score_type = "results_net") {
   }
   results_all <- 
     d %>% 
+    # bortse från Tour20 pga inga sparade scorer
+    filter(tour_id != "tour20") %>%     
     unnest(!!rlang::sym(score_type)) %>% 
     select(tour_id, lb) %>% 
     unnest(lb)
@@ -219,7 +225,7 @@ plot_individual_h2h <- function(player, score_type = "results_net") {
   # Fixa gemensam axel med labels (date och tour-no)
   all_rounds <-
     list(
-      tour_id = tours[-c(1:4)],
+      tour_id = tours[-c(1:4, 20)],
       round_id = c("r1", "r2", "r3")
     ) %>%
     cross_df() %>%
