--- a/content/stats/topscores.Rmd
+++ b/content/stats/topscores.Rmd
@@ -1,9 +1,10 @@
 ---
 output: html_document
 title: Topscores
-image: /img/misc/topscores.jpg  
-showonlyimage: false  
+image: /img/misc/topscores.jpg
+showonlyimage: false
 summary: Bästa och sämtsta scorerna i tourens histora
+draft: true
 ---
 ```{r setup, include=FALSE}
 library(patchwork)
@@ -21,7 +22,7 @@ d <- read_rds(
   file.path(
     "C:/Users/caewim02/Documents/_Personal_/golf/Touren_blogdown/my_code",
     "data/complete_data.RDS"
-  )  
+  )
 )
 library(ggiraph)
 theme_set(get_my_ggtheme())
@@ -130,9 +131,9 @@ top_x_plot <- function(top_x, main, my_note) {
     geom_vline(xintercept = 0) +
     geom_segment(
       aes(x = 0, y = idx, xend = score, yend = idx),
-      size = 1.2, 
+      size = 1.2,
       show.legend = FALSE
-    ) +    
+    ) +
     # geom_point(
     #   aes(colour = player),
     #   size = 2
@@ -141,9 +142,9 @@ top_x_plot <- function(top_x, main, my_note) {
       aes(
         tooltip = score,
         data_id = enc2utf8(player)        # https://stackoverflow.com/a/56900588
-      ), 
+      ),
       size = 3
-    ) +     
+    ) +
     scale_colour_manual(
       values = get_player_colour(),
       name = NULL
@@ -177,29 +178,29 @@ top_x_plot <- function(top_x, main, my_note) {
     scale_x_discrete(expand = c(0.1, 0.1), position = "top") +
     theme(
       axis.text.x = element_text(hjust = 1, face = "bold"),
-      #plot.margin = unit(c(.1, 0, .1, 1), "cm"), 
-      panel.grid.major = element_blank(), 
+      #plot.margin = unit(c(.1, 0, .1, 1), "cm"),
+      panel.grid.major = element_blank(),
       axis.text.y = element_blank()
     )
-  
+
   # Lägg ihop mha 'patchwork' och ggiraph::girafe
   pg <- girafe(
     code = print(
-      p_meta + p_lollipop + 
+      p_meta + p_lollipop +
       plot_annotation(
         title = main,
         subtitle = my_note
         #caption = 'Disclaimer: None of these plots are insightful'
-      ) + 
+      ) +
       plot_layout(guides = "collect")
-    ), 
+    ),
     height_svg = 8
-  )  
-  
-  
+  )
+
+
   # Gamla versionen av hopplagda plottar... krångligt, och delar av den
-  # sammanlagda plotten följer inte det gemensamma temat. 
-  # 
+  # sammanlagda plotten följer inte det gemensamma temat.
+  #
   # title_grob <- grid::textGrob(
   #   str_c(main, my_note, sep = "\n"),
   #   x = .01,
@@ -208,7 +209,7 @@ top_x_plot <- function(top_x, main, my_note) {
   #   vjust = 1,
   #   gp = gpar(cex = .8, fontface = "bold")
   # )
-  # 
+  #
   # # lägg ihop med gemensam legend
   # tmp <-
   #   p_lollipop %>%
@@ -216,7 +217,7 @@ top_x_plot <- function(top_x, main, my_note) {
   #   ggplot_gtable()
   # idx <- which(sapply(tmp$grobs, function (x) x$name) == "guide-box")
   # legend = tmp$grobs[[idx]]
-  # 
+  #
   # egg::ggarrange(
   #   p_meta,
   #   p_lollipop + theme(legend.position = "none"),
