--- a/content/stats/tourscores.Rmd
+++ b/content/stats/tourscores.Rmd
@@ -156,7 +156,7 @@ plot_tour_scores <- function(ds, score_type = "rel_net") {
     scale_y_continuous(
       #limits = c(0, NA), 
       breaks = 1:20, 
-      expand = expand_scale(mult = c(0, .1))
+      expand = expansion(mult = c(0, .1))
     ) +
     geom_segment(
       aes(x = date, xend = date, y = 0, yend = n_players),
