fix figure alignment

--- a/content/stats/playerscores.Rmd
+++ b/content/stats/playerscores.Rmd
@@ -131,9 +131,9 @@ plot_player_scores <- function(ds, results_type = "results_net") {
     ggobj = p, 
     height_svg = 6, 
     # width_svg = 5, 
-    options = list(
-      opts_sizing(rescale = TRUE, width = .7)
-    )
+    # options = list(
+    #   opts_sizing(rescale = TRUE, width = .7)
+    # )
   )
   
  }
