--- a/content/news/_index.Rmd
+++ b/content/news/_index.Rmd
@@ -42,6 +42,10 @@ putt för totalseger. **Grattis Scherlund!!!!**
 
 Spurtpriset instiftades. Det vanns av Julla!
 
+Noterbart är även hur de nya hcp-reglerna börjar påverka resultaten. De tre 
+topplaceringarna i höstens upplaga går samtliga in på Tourens topp10-lista över
+bästa slutresultat.
+
 Leve Champ!
 
 
