--- a/content/stats/playerscores.Rmd
+++ b/content/stats/playerscores.Rmd
@@ -102,7 +102,7 @@ plot_player_scores <- function(ds, results_type = "results_net") {
     ) + 
     scale_fill_manual(
       values = get_player_colour(), 
-      guide = FALSE
+      guide = "none"
     ) +
     # Osynlig punkt tillför interaktivitet
     geom_point_interactive(
@@ -120,7 +120,7 @@ plot_player_scores <- function(ds, results_type = "results_net") {
     ) +
     scale_colour_manual(
       values = get_player_colour(), 
-      guide = FALSE
+      guide = "none"
     ) +    
     labs(
       title = my_title,
