--- a/content/stats/spring_vs_fall.Rmd
+++ b/content/stats/spring_vs_fall.Rmd
@@ -23,92 +23,148 @@ theme_set(get_my_ggtheme())
 ```
 
 
-Scorer på hösten och våren.
+Jämför scorer (brutto) mellan höst och vår inom samma kalenderår.
 
-
-```{r function, include=FALSE}
-plot_spring_vs_fall <- function(d, score_type = "rel_net") {
-
-  # score_type <- "rel_net"
-
-  p_colours <- get_player_colour()
-  
-  d_plot <- 
-    d %>% 
-    filter(map_lgl(.[[score_type]], ~!is.null(.))) %>% 
-    unnest(!!rlang::sym(score_type)) %>% 
-    mutate(
-      hole_nr_tmp = str_extract(hole_id, "\\d+$") %>% as.integer(),
-      round_id = ceiling(hole_nr_tmp / 18) %>% as.character(),
-      comb_id = str_c(tour_id, round_id, sep = "-")
-    ) %>% 
-    group_by(tour_id, comb_id) %>% 
-    summarise_at(vars(one_of(names(p_colours))), sum) %>% 
-    ungroup() %>% 
-    pivot_longer(
-      cols = -c(comb_id, tour_id),
-      names_to = "player",
-      values_to = "score"
+```{r, echo=FALSE, fig.height=8, out.width="100%"}
+# comparing spring and autum scores ----
+ds <- d
+ds <- ds %>% filter(!map_lgl(abs_gross, is.null))
+d_plot <-
+  ds %>%
+  select(tour_id, meta, score = abs_gross) %>%
+  mutate(
+    season = map_chr(
+      meta,
+      ~case_when(
+        str_detect(..1$date, "HT") ~ "Höst",
+        str_detect(..1$date, "VT") ~ "Vår"
+      )
+    ),
+    year = map_int(
+      meta,
+      ~str_extract(..1$date, "\\d{2}$") %>% str_c("20", .) %>% as.integer()
     )
-  
-  dates <- 
-    d %>% 
-    unnest(meta) %>%
-    select(tour_id, date) %>% 
-    mutate(
-      season = case_when(
-        str_detect(date, "^HT") ~ "Höst",
-        str_detect(date, "^VT") ~ "Vår",
-        TRUE ~ NA_character_
-      ), 
-      season = factor(season, levels = c("Vår", "Höst")), 
-      year = str_extract(date, "\\d+$") %>% str_c("20", .) %>% as.integer()
+  ) %>%
+  select(-meta) %>%
+  unnest(cols = score) %>%
+  mutate(
+    hole_nr_tmp = str_extract(hole_id, "\\d+$") %>% as.integer(),
+    round_id = ceiling(hole_nr_tmp / 18) %>% as.character()
+  ) %>%
+  select(-hole_nr_tmp) %>%
+  relocate(
+    round_id, .after = hole_id
+  ) %>%
+  group_by(tour_id, year, season, round_id) %>%
+  summarise(across(where(is.integer), sum), .groups = "drop_last") %>%
+  summarise(across(where(is.integer), mean), .groups = "drop")
+
+d_plot2 <-
+  d_plot %>%
+  group_by(year) %>%
+  arrange(year, desc(season)) %>%
+  # Jämför genomsnittlig score per runda (Vår - Höst)
+  summarise(across(where(is.double), ~ .x[1] - .x[2])) %>%
+  pivot_longer(cols = -year, names_to = "player", values_to = "season_diff") %>%
+  filter(!is.na(season_diff)) %>%
+  mutate(
+    best_season = case_when(
+      season_diff < 0 ~ "Vår",
+      season_diff > 0 ~ "Höst",
+      TRUE ~ "Lika"
     )
-  
-  d_plot <- left_join(d_plot, dates, by = "tour_id")
-  
-  ggplot(d_plot, aes(x = season, y = score)) + 
-    geom_hline(
-      yintercept = 0, 
-      color = "gray", 
-      size = 2
-    ) + 
-    geom_boxplot(
-      aes(fill = player),
-      outlier.colour = NA,
-      alpha = .5,
-      na.rm = TRUE
-    ) + 
-    geom_jitter(
-      aes(colour = year),
-      width = .2,
-      height = 0,
-      alpha = .8,
-      size = 2,
-      na.rm = TRUE
-    ) + 
-    scale_fill_manual(
-      values = p_colours, 
-      drop = FALSE, 
-      guide = FALSE
-    ) +
-    scale_colour_viridis_c(option = "inferno", end = .8) +
-    labs(
-      title = "Score / runda",
-      x = NULL
-    ) +
-    #theme_bw() +
-    theme(
-      legend.text = element_text(size = rel(.7), angle = 90, vjust = 0.5, 
-                                 hjust = .5), 
-      legend.position = "bottom"
-    ) +
-    facet_wrap(~player)
-  
-}
+  )
+d_annotation <-
+  d_plot2 %>%
+  group_by(player) %>%
+  summarise(mean = mean(season_diff), .groups = "drop") %>%
+  arrange(desc(mean)) %>%
+  mutate(
+    lab = glue::glue(
+      "{round(abs(mean), 1)} slag bättre per runda på \\
+      {if_else(mean < 0, 'Vår', 'Höst')}en
+      "
+    ),
+    player = as_factor(player)
+  )
+
+d_plot2 %>%
+  # faktor för att sortera facets - men det ignoreras
+  mutate(player = factor(player, levels = d_annotation$player)) %>%
+  arrange(player) %>%
+  ggplot(aes(x = year, y = season_diff)) +
+  scale_x_continuous(
+    breaks = seq(2000, 2030, by = 2)
+  ) +
+  modelr::geom_ref_line(h = 0) +
+  geom_line(alpha = .5) +
+  geom_point(aes(colour = best_season), na.rm = TRUE)  +
+  facet_wrap(facets = vars(player)) +
+  scale_color_brewer(palette = "Dark2") +
+  geom_text(
+    data = d_annotation,
+    aes(label = lab),
+    x = Inf,
+    y = -Inf,
+    hjust = 1.05,
+    vjust = -1,
+    size = 3
+  ) +
+  labs(
+    title = "Bästa säsongen",
+    subtitle = glue::glue(
+      "Skillnaden mellan vår och höst (brutto) beräknas inom ett och samma
+      spelår, dvs spelaren måste ha deltagit bårde vår och höst samma år för
+      att resultaten ska inkluderas här. Magkänslan säger att det ofta går
+      bättre på hösten. Denna figur stödjer delvis den känslan."
+    ) %>% str_wrap(width = 120),
+    color = "Bästa säsong",
+    x = NULL,
+    caption = glue::glue(
+      "Skillnad mellan vår och höst (i genomsnitt per runda, brutto):
+      Positiva värden => bättre på hösten; \\
+      Negativa värden => bättre på våren"
+    )
+  )
 ```
 
-```{r plot, echo=FALSE, fig.height=8, out.width="100%"}
-plot_spring_vs_fall(d, score_type = "rel_net")
+
+```{r, echo=FALSE, fig.height=8, out.width="100%"}
+# Andel spelår
+d_plot2 %>%
+  group_by(player, best_season) %>%
+  summarise(
+    best_season = unique(best_season),
+    n = n(),
+    .groups = "drop_last"
+  ) %>%
+  summarise(
+    best_season = best_season,
+    n = n,
+    prc = n / sum(n),
+    .groups = "drop"
+  ) %>%
+  arrange(best_season, desc(prc)) %>%
+  mutate(
+    player = as_factor(player),
+    best_season = factor(best_season, levels = c("Vår", "Lika", "Höst"))
+  ) %>%
+  ggplot(aes(x = player, y = prc)) +
+  geom_col(aes(fill = best_season)) +
+  scale_y_continuous(labels = scales::percent) +
+  scale_fill_brewer(palette = "Dark2") +
+  labs(
+    title = "Bästa säsongen",
+    subtitle = glue::glue(
+      "Bästa säsongen beräknas inom ett och samma spelår (brutto), dvs
+      spelaren måste ha deltagit bårde vår och höst samma år för att
+      jämförelsen ska inkluderas här. Klar minoritet av spelare verkar
+      skjuta bättre scorer på våren än på hösten."
+    ) %>% str_wrap(width = 120),
+    fill = "Bästa säsong",
+    x = NULL
+  )
+
 ```
+
 
