--- a/content/news/_index.Rmd
+++ b/content/news/_index.Rmd
@@ -39,25 +39,30 @@ med tjock skog som avgränsades med elstängsel.
 Kampen att undvika loser blev en episk duell. En bit in på sista rundan stod det
 klart att det skulle stå mellan Andre "Houdini" Wänman och Jonas "Ironman"
 Strömdahl. Båda kämpade med sitt golfspel, där det periodvis verkade som fördömt
-för båda spelarna att ens träffa bollen hjälpligt. Där emellan turades
-kombatanterna om att i perioder både stoppa den värsta blödningen och stundtals
-blixtra till med riktigt fina slag. Trots den ofta väldigt, väldigt kämpiga
-golfen var det ingen som gav upp. In på 18:e behövde André ta in två slag
-på Jonas. André toppade sitt utslag långt ut till höger alldeles intill ett
-vattenhinder, och följde upp med en socket; 90 grader höger rakt ut i vattnet. Därmed var kampen avgjord. Inte ens Houdini kunde hålla sig undan loser
-denna gång.
+för båda spelarna att få ut bollen på banan. 
+Vi kan bland annat konstatera att båda fick plita ner 
+[tre raka kvadrupel-bogies](/stats/consecutiveruns/#q-bogey), samt att Jonas där
+till kryddade med [två raka fepplar](/stats/consecutiveruns/#fepple). Där
+emellan turades kombatanterna om att i perioder både stoppa den värsta
+blödningen och stundtals blixtra till med riktigt fina slag. Trots den ofta
+väldigt, väldigt kämpiga golfen var det ingen som gav upp. In på 18:e behövde
+André ta in två slag på Jonas. André toppade sitt utslag långt ut till höger
+alldeles intill ett vattenhinder, och följde upp med en socket - 90 grader höger
+rakt ut i vattnet. Därmed var kampen avgjord. Inte ens Houdini kunde hålla sig
+undan loser denna gång.
 
 André hade inför Touren inte spelat golf sedan innan pandemin, 2019, och därmed
 heller inte registrerat några hcp-grundande rundor. Samtidigt har de flesta 
 andra spelare registrerat en del dålig golf, vilket avspeglas i antal slag
 på [slopen](/stats/shotsgiven/). 
 
-I andra änden av tävlingen fick vi första gången någonsin se Björn storspela två
-rundor och gå ut i en betryggande ledning inför sista rundan. Ledningen höll i
-sig 3 hål, sedan övertogs den av 9-faldiga champ Erik. Erik spelade magnifik
-golf, i vanlig ordning, och ingen mäktade med att göra motstånd. Snabbt rykte
-han till sig en ointaglig ledning, och kunde kosta på sig att maxa sista hålet
-och treputta sista green. **Därmed vann Erik sin 10:e champ-titel!!!**
+I andra änden av tävlingen fick vi för första gången någonsin se Björn storspela
+två rundor och gå ut i en betryggande ledning inför sista rundan. Ledningen höll
+i 3 hål, sedan övertogs den av 9-faldiga champ Erik. Erik spelade magnifik golf,
+i vanlig ordning, och ingen mäktade med att göra motstånd. Snabbt rykte han till
+sig en ointaglig ledning, och kunde kosta på sig att treputta sista green, maxa
+hålet och ändå vinna med den största [marginalen](/stats/margins/) i Tourens
+histora. **Därmed vann Erik sin 10:e champ-titel!!!**
 
 
 Leve champ!
