--- a/content/news/_index.Rmd
+++ b/content/news/_index.Rmd
@@ -33,7 +33,7 @@ i golfen, men sitt ansvar som arrangör tog han på största allvar. André
 levererade ett prickfritt arrangemang i allt från planering till bokning och
 kommunikation. Hatten av till Houdini.
 
-Golfen spelades på (eller i närheten av) Sörmjöles breda fairways under
+Golfen spelades på (eller i närheten av) Sörfors breda fairways under
 fredagen, där vi i princip hade hela anläggningen för oss själva (mycket tacke
 vare att det var frost och rejält kallt på morgonen, och därefter ihållande regn
 efter lunch). Det hela avgjordes småningom i Holmsund (Röd/Blå-slinga) under
